# egodex_retargeting

./: .gitignore  CLAUDE.md  README.md  doc.md  initial_plan.md  plan.md  pyproject.toml
logs/: session_2026-04-07.md  session_2026-04-08.md
notebooks/: 00_explore_egodex.py  01_variance_report.py  02_calibrate_open_questions.py  03_stage2_batch.py  04_stage3_batch.py  05_stage3_visualize.py  06_stage3_animate.py  07_grasp_clustering.py  08_to_lerobot.py  09_train_act.py  10_eval_act.py
outputs/: calibration_basic_pick_place.csv  variance_report_basic_pick_place.csv
src/mimicdreamer_egodex/: action_alignment.py  egostabilizer.py  eval_env.py  finger_retargeting.py  lerobot_pyav_patch.py
